[package]
name = "yadd"
version = "0.2.2"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
edition = "2018"

[dependencies]
trust-dns-proto = "0.5.0"
tokio = "0.1.11"
slog = "2.4.1"
slog-term = "2.4.0"
slog-async = "2.3.0"
lazy_static = "1.1.0"
parking_lot = "0.6.4"
lock_api = "0.1.4"
iprange = "0.6.2"
ipnet = "2.0.0"
failure = "0.1.3"
clap = "2.23.0"
toml = "0.4"
serde = "1.0.80"
serde_derive = "1.0.80"

[dependencies.trust-dns]
version = "0.15.0"

[dependencies.trust-dns-server]
version = "0.15.0"

[patch.crates-io]
trust-dns-proto = { version = "0.5.0", git = 'https://github.com/sticnarf/trust-dns', branch = 'make-tokio-rustls-optional-for-server' }
trust-dns = { version = "0.15.0", git = 'https://github.com/sticnarf/trust-dns', branch = 'make-tokio-rustls-optional-for-server' }
trust-dns-server = { version = "0.15.0", git = 'https://github.com/sticnarf/trust-dns', branch = 'make-tokio-rustls-optional-for-server' }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
