[package]
name = "yadd"
version = "0.3.0"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
edition = "2018"

[dependencies]
trust-dns = { version = "0.15.0", git = "https://github.com/bluejekyll/trust-dns" }
trust-dns-proto = { version = "0.5.0", git = "https://github.com/bluejekyll/trust-dns" }
trust-dns-server = { version = "0.15.0", git = "https://github.com/bluejekyll/trust-dns" }
tokio = "0.1.11"
slog = "2.4.1"
slog-term = "2.4.0"
slog-async = "2.3.0"
lazy_static = "1.1.0"
parking_lot = "0.6.4"
lock_api = "0.1.4"
iprange = "0.6.2"
ipnet = "2.0.0"
failure = "0.1.3"
clap = "2.23.0"
toml = "0.4"
serde = "1.0.80"
serde_derive = "1.0.80"
tokio-tcp = "0.1.2"
tokio-tls = "0.2.0"
regex = "1"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_arch = "mips", target_arch = "mips64", all(target_os = "freebsd", target_arch = "x86")))'.dependencies]
trust-dns-native-tls = { version = "0.4.0", git = "https://github.com/bluejekyll/trust-dns" }

[target.'cfg(not(any(target_os = "macos", target_os = "windows", target_arch = "mips", target_arch = "mips64", all(target_os = "freebsd", target_arch = "x86"))))'.dependencies]
rustls = "0.14.0"
webpki-roots = "0.15.0"
trust-dns-rustls = { version = "0.4.0", git = "https://github.com/bluejekyll/trust-dns" }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
debug = true
opt-level = 'z'
